--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,7 @@
 # Root logger option
-log4j.rootLogger=DEBUG, stdout
+log4j.rootLogger=INFO, stdout
+
+log4j.logger.yummynodlebar=DEBUG, stdout
 
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -10,6 +12,6 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1
 log4j.logger.org.hibernate.SQL=INFO, stdout
 log4j.logger.org.hibernate.type=INFO
 
-log4j.logger.yummynodlebar=DEBUG, stdout
+
 
 
